# LUNA-IA-OPERATING-SYSTEM

./: .gitignore  launcher.py  pyproject.toml  requirements.txt
app/: dependency_container.py  main.py  shutdown.py  startup.py
config/: ai.py  logging.py  settings.py
core/: base_service.py
core/interaction/: hotword.py  microphone.py  speaker.py
core/perception/: audio_buffer.py  audio_processor.py  silence_detector.py  speech_to_text.py  voice_activity.py
events/: bus.py  dispatcher.py  events.py  publisher.py  subscriber.py
events/handlers/: audio_handlers.py  speech_handlers.py  system_handlers.py  wakeword_handlers.py
events/schemas/: event_payload.py
gui/: app.py  canvas.py  titlebar.py  window.py
gui/animations/: orbit.py  pulse.py  rotation.py
gui/background/: nebula.py  stars.py  universe.py
gui/components/: ai_eye.py  data_streams.py  energy_core.py  hologram_grid.py  holographic_rings.py  neural_network.py  particles_field.py  status_hud.py  voice_wave.py
gui/core/: ai_core.py  controller.py  state.py
gui/effects/: bloom.py  glow.py  particles.py  scan.py
gui/interface/: status.py  subtitles.py  waveform.py
gui/renderer/: painter.py  renderer.py
gui/themes/: colors.py  fonts.py
kernel/: lifecycle.py  plugin_manager.py  registry.py  service_manager.py
tests/: test.py  test_wakeword.py  test_whisper.py
