[project]
name = "luna-ai"
version = "0.1.0"
description = "Personal AI Operating System"
authors = [
    {name = "Wagner"}
]
requires-python = ">=3.12"

dependencies = [
    "python-dotenv",
    "pydantic",
    "loguru",
    "fastapi",
    "uvicorn",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = [
    "."
]